<resources>
    <string name="app_name">WeatherApp</string>
    <string name="find_your_city">Type your City here...</string>
    <string name="generic_error">Ops, something went wrong!</string>
    <string name="no_city_found">Wow, we couldn\'t find our city. Are you sure you are from this planet?</string>
    <string name="country_label">Country</string>
    <string name="city_label">Region - City</string>
    <string name="coordinates_label">Latitude / Longitude</string>
    <string name="loading_message">Searching for aliens, I mean places...</string>
    <string name="loading_message_weather">Checking my Crystal Ball...</string>
    <string name="fab_explainer">Click here to add a \ncity to your list</string>
    <string name="time">Time: </string>
    <string name="refresh">Refresh</string>
    <string name="hour_0">0</string>
    <string name="hour_3">3</string>
    <string name="hour_6">6</string>
    <string name="hour_9">9</string>
    <string name="hour_12">12</string>
    <string name="hour_15">15</string>
    <string name="hour_18">18</string>
    <string name="hour_21">21</string>
    <string name="temperature">Temperature: </string>
    <string name="precipitation">Rain: </string>
    <string name="humidity">Humidity: </string>
    <string name="wind">Wind: </string>
    <string name="celsius">°C</string>
    <string name="fahrenheit">°F</string>
    <string name="kmh">km/h</string>
    <string name="day">DAY</string>
    <string name="now">NOW</string>
    <string name="max">Max:</string>
    <string name="min">Min:</string>
    <string name="updated_at">Updated at:</string>
</resources>
