<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:elevation="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/txt_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="16dp"
                android:text="2016-04-16" />

            <ImageView
                android:id="@+id/img_weather"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_margin="16dp" />

            <LinearLayout
                android:id="@+id/ll1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginTop="16dp"
                android:layout_toRightOf="@id/img_weather"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txt_weather_status"
                    style="@style/temperatureStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Cloudy" />

                <TextView
                    android:id="@+id/txt_weather_temperatures_c"
                    style="@style/temperatureStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="5°C / 7°C" />

                <TextView
                    android:id="@+id/txt_weather_temperatures_f"
                    style="@style/temperatureStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="5°F / 7°F" />
            </LinearLayout>

        </RelativeLayout>

        <SeekBar
            android:id="@+id/seekBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="16dp"
            android:max="7" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/seekBar"
            android:layout_margin="8dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                style="@style/seekBarLabelStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/time" />

            <TextView
                style="@style/seekBarLabelStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/hour_0" />

            <TextView
                style="@style/seekBarLabelStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/hour_3" />

            <TextView
                style="@style/seekBarLabelStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/hour_6" />

            <TextView
                style="@style/seekBarLabelStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/hour_9" />

            <TextView
                style="@style/seekBarLabelStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/hour_12" />

            <TextView
                style="@style/seekBarLabelStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/hour_15" />

            <TextView
                style="@style/seekBarLabelStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/hour_18" />

            <TextView
                style="@style/seekBarLabelStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/hour_21" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_toRightOf="@id/ll1"
            android:gravity="right"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txt_precipitation"
                style="@style/seekBarLabelStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/precipitation" />

            <TextView
                android:id="@+id/txt_humidity"
                style="@style/seekBarLabelStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/humidity" />

            <TextView
                android:id="@+id/txt_wind"
                style="@style/seekBarLabelStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wind" />

        </LinearLayout>
    </LinearLayout>
</android.support.v7.widget.CardView>