<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:elevation="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/txt_date"
                style="@style/dateStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="16dp"
                android:gravity="center"
                android:paddingTop="16dp"
                android:text="@string/now" />

            <TextView
                android:id="@+id/txt_hour"
                style="@style/upDatedAtStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:layout_marginRight="4dp"
                android:layout_marginTop="4dp"
                android:gravity="center" />

            <ImageView
                android:id="@+id/img_weather"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_margin="16dp" />

            <LinearLayout
                android:id="@+id/ll1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginTop="16dp"
                android:layout_toRightOf="@id/img_weather"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txt_weather_status"
                    style="@style/temperatureStyle"
                    android:layout_width="180dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:ellipsize="end"
                    android:maxLines="2" />

                <TextView
                    android:id="@+id/txt_weather_temperatures_c"
                    style="@style/temperatureStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            </LinearLayout>

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txt_precipitation"
                style="@style/seekBarLabelStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.1"
                android:text="@string/precipitation" />

            <TextView
                android:id="@+id/txt_humidity"
                style="@style/seekBarLabelStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/humidity" />

            <TextView
                android:id="@+id/txt_wind"
                style="@style/seekBarLabelStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.2"
                android:text="@string/wind" />

        </LinearLayout>
    </LinearLayout>
</android.support.v7.widget.CardView>